# harvest-transformer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  okteto.yml  pyproject.toml  qa-collection-map.json  requirements-dev.txt  requirements.txt
.github/workflows/: actions.yaml  docker-image-to-aws-ecr.yaml  lint.yml  security.yaml  unit-tests.yaml
harvest_transformer/: __main__.py  file_processor.py  link_processor.py  pulsar_message.py  qa_processor.py  render_processor.py  sentinel2_ard_processor.py  transformer.py  transformer_messager.py  utils.py  workflow_processor.py
test/: test_link_processor.py
test_data/: convert-url-app.cwl  dataset-test-stac.json  test_links_add_missing_links.json  test_links_remove_unknown_links.json  test_links_replacement_only.json  test_workflows_and_links_with_new_self_link-expected.json  test_workflows_and_links_with_only_cwl_input_valid-expected.json  test_workflows_correct_self_link-expected.json  test_workflows_correct_self_link.json  test_workflows_dont_overwrite-expected.json  test_workflows_dont_overwrite.json  test_workflows_fill_blanks-expected.json  test_workflows_fill_blanks.json  test_workflows_with_only_cwl_input_invalid-expected.json  test_workflows_with_only_cwl_input_invalid.json  test_workflows_with_only_cwl_input_valid-expected.json  test_workflows_with_only_cwl_input_valid.json  workflow-test-stac-1-expected.json  workflow-test-stac-2-expected.json  workflow-test-stac-2.json  workflow-test-stac-3-expected.json  workflow-test-stac-3.json
tests/: render_processor.py  test_link_processor.py  test_main.py  test_qa_processor.py  test_render_processor.py  test_sentinel2_ard_processor.py  test_transformer_messager.py  test_utils.py  test_workflow_processor.py
