[project]
name = "Harvest-Transformer"
dynamic = ["version"]
description = "Transform files recently updated by harvesters to be suitable for use in the EODH catalogue"
readme = "README.md"

requires-python = ">=3.12"

license = {file = "LICENSE"}

authors = [
  {name = "Telespazio UK Ltd", email = "alex.palmer@telespazio.com" },
  {name = "Telespazio UK Ltd", email = "thomas.jellicoe@telespazio.com" }
]

maintainers = [
  {name = "Telespazio UK Ltd", email = "alex.palmer@telespazio.com" },
  {name = "Telespazio UK Ltd", email = "thomas.jellicoe@telespazio.com" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",

  "License :: OSI Approved :: BSD License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
    "boto3",
    "botocore",
    "jsonschema",
    "pyyaml",
    "requests",
    "html-sanitizer",
    "jsonpatch",
    "click",
    "eodhp-utils @ git+https://github.com/EO-DataHub/eodhp-utils@multithreading-not-using-multi-threads"
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies] # Optional
dev = [
    "pip-tools",
    "pytest",
    "pytest-xdist",
    "pytest-mock",
    "pytest-watcher",
    "black",
    "ruff",
    "isort",
    "validate-pyproject[all]",
    "pre-commit",
    "moto",
]

# List URLs that are relevant to your project
#
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
[project.urls]  # Optional
homepage = "https://github.com/EO-DataHub/"
repository = "https://github.com/EO-DataHub/harvest-transformer"
changelog = "https://github.com/EO-DataHub/harvest-transformer/blob/main/CHANGELOG.md"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=69.0.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true


[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "integrationtest: Integration test"
]

[tool.setuptools]
packages = []

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.pylint.'MESSAGES CONTROL']
disable = '''
    line-too-long,
    missing-class-docstring, 
    too-many-locals, 
    too-many-instance-attributes,
    logging-fstring-interpolation,
'''

[tool.isort]
profile = "black"
