[project]
name = "harvest-transformer"
dynamic = ["version"]
description = "Transform files recently updated by harvesters to be suitable for use in the EODH catalogue"
readme = "README.md"

requires-python = ">=3.13,<3.14"

license = {file = "LICENSE"}

authors = [
  {name = "Telespazio UK Ltd", email = "alex.palmer@telespazio.com" },
  {name = "Telespazio UK Ltd", email = "thomas.jellicoe@telespazio.com" }
]

maintainers = [
  {name = "Telespazio UK Ltd", email = "alex.palmer@telespazio.com" },
  {name = "Telespazio UK Ltd", email = "thomas.jellicoe@telespazio.com" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "boto3",
    "botocore",
    "jsonschema",
    "pyyaml",
    "requests",
    "html-sanitizer",
    "jsonpatch",
    "click",
    "eodhp-utils @ git+https://github.com/EO-DataHub/eodhp-utils@v0.1.12",
]

[project.urls]
homepage = "https://github.com/EO-DataHub/"
repository = "https://github.com/EO-DataHub/harvest-transformer"
changelog = "https://github.com/EO-DataHub/harvest-transformer/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-mock",
    "pytest-watcher",
    "pytest-xdist",
    "ruff",
    "validate-pyproject",
    "moto",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["harvest_transformer"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
  "integrationtest: Integration test"
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "FAST", # FastAPI
    "RUF",  # RUF-specific rules
    "SIM",  # Simplifications
    "B",    # Bugbear
    "ANN",  # Annotations
    "PLC",  # Pylint convention
    "PLE",  # Pylint errors
    "UP",   # pyupgrade
    "FURB", # refurb
    "PT",   # pytest
]
ignore = [
    "E501",   # line too long
    "SIM108", # ternary operator
    "SIM103", # return bool directly
    "B008",   # function call in default argument (incompatible with FastAPI)
    "ANN401", # dynamically typed expressions (typing.Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
